Create images directory Finish lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,24 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="../images/lasagna.jpeg">
+    <h2>Description</h2>
+    <p>Layer upon layer of thin, tender sheets of pasta interwoven with rich, velvety béchamel sauce, vibrant marinara, and a hearty medley of seasoned ground meat, sautéed onions, garlic, and finely chopped vegetables, harmonizing in a symphony of flavors. Each bite unveils a savory embrace of melted mozzarella and Parmesan cheese, cascading over the palate like a comforting blanket of indulgence. This Italian classic, baked to golden perfection, transcends mere sustenance, embodying a culinary masterpiece that delights the senses with every luscious, decadent forkful.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Lasagna noodles</li>
+        <li>Ground beef or Italian sausage</li>
+        <li>Marinara sauce</li>
+        <li>Bechamel sauce</li>
+        <li>Mozzarella cheese</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li><b>Prepare Ingredients:</b> Gather lasagna noodles, marinara sauce, béchamel sauce, ground beef or Italian sausage, and mozzarella cheese. Cook the meat with onions, garlic, and seasoning until browned.</li>
+        <li><b>Boil Noodles:</b> Cook lasagna noodles until al dente according to package instructions. Drain and set aside.</li>
+        <li><b>Layer Lasagna:</b> Preheat oven. In a baking dish, layer marinara sauce, noodles, béchamel sauce, cooked meat, and mozzarella. Repeat until ingredients are used, ending with cheese on top.</li>
+        <li><b>Bake Lasagna:</b> Cover dish with foil and bake for 30-40 minutes until cheese is bubbly. Remove foil for the last 10 minutes to brown cheese.</li>
+        <li><b>Server and Enjoy:</b> Let cool slightly, then slice and serve. Garnish with herbs if desired. Enjoy your homemade lasagna!</li>
+    </ol>
 </body>
 </html>
